# python-coriolisclient

./: .gitignore  .stestr.conf  README.rst  requirements.txt  setup.cfg  test-requirements.txt  tox.ini
.github/workflows/: unit-tests.yml
coriolisclient/: __init__.py  base.py  client.py  constants.py  exceptions.py
coriolisclient/cli/: deployments.py  diagnostics.py  endpoint_destination_minion_pool_options.py  endpoint_destination_options.py  endpoint_instances.py  endpoint_minion_pool_options.py  endpoint_networks.py  endpoint_source_minion_pool_options.py  endpoint_source_options.py  endpoint_storage.py  endpoints.py  formatter.py  licensing.py  licensing_appliances.py  licensing_reservations.py  licensing_server.py  logging.py  migrations.py  minion_pool_executions.py  minion_pools.py  providers.py  regions.py  replica_executions.py  replica_schedules.py  replicas.py  services.py  shell.py  transfer_executions.py  transfer_schedules.py  transfers.py  utils.py
coriolisclient/tests/: test_base.py  test_client.py  testutils.py
coriolisclient/tests/cli/: test_deployments.py  test_diagnostics.py  test_endpoint_destination_minion_pool_options.py  test_endpoint_destination_options.py  test_endpoint_instances.py  test_endpoint_networks.py  test_endpoint_source_minion_pool_options.py  test_endpoint_source_options.py  test_endpoint_storage.py  test_endpoints.py  test_formatter.py  test_licensing.py  test_licensing_appliances.py  test_licensing_reservations.py  test_licensing_server.py  test_logging.py  test_migrations.py  test_minion_pools.py  test_providers.py  test_regions.py  test_replica_executions.py  test_replica_schedules.py  test_replicas.py  test_services.py  test_shell.py  test_transfer_executions.py  test_transfer_schedules.py  test_transfers.py  test_utils.py
coriolisclient/tests/cli/data/: shell_check_auth_arguments.yml  shell_create_keystone_auth.yml  user_scripts.yml
coriolisclient/tests/v1/: test_common.py  test_deployments.py  test_diagnostics.py  test_endpoint_destination_minion_pool_options.py  test_endpoint_destination_options.py  test_endpoint_instances.py  test_endpoint_networks.py  test_endpoint_source_minion_pool_options.py  test_endpoint_source_options.py  test_endpoint_storage.py  test_endpoints.py  test_licensing.py  test_licensing_appliances.py  test_licensing_reservations.py  test_licensing_server.py  test_logging.py  test_migrations.py  test_minion_pools.py  test_providers.py  test_regions.py  test_replica_executions.py  test_replica_schedules.py  test_replicas.py  test_services.py  test_transfer_executions.py  test_transfer_schedules.py  test_transfers.py
coriolisclient/tests/v1/data/: logs.yml
coriolisclient/v1/: common.py  deployments.py  diagnostics.py  endpoint_destination_minion_pool_options.py  endpoint_destination_options.py  endpoint_instances.py  endpoint_minion_pool_options.py  endpoint_networks.py  endpoint_source_minion_pool_options.py  endpoint_source_options.py  endpoint_storage.py  endpoints.py  licensing.py  licensing_appliances.py  licensing_reservations.py  licensing_server.py  logging.py  migrations.py  minion_pool_executions.py  minion_pools.py  providers.py  regions.py  replica_executions.py  replica_schedules.py  replicas.py  services.py  transfer_executions.py  transfer_schedules.py  transfers.py
samples/: README.md  README.rst  endpoint_resouces_samples.py  endpoint_resource_operations.py  endpoint_samples.py  replica_samples.py
