[metadata]
name = python-coriolisclient
summary = Coriolis Command-line Client
description-file =
    README.rst
author = Cloudbase Solutions Srl
author-email = info@cloudbasesolutions.com
home-page = http://cloudbase.it
classifier =
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.4
    Environment :: Console

[files]
packages =
    coriolisclient

[entry_points]
console_scripts =
    coriolis = coriolisclient.cli.shell:main

coriolis.v1 =
    endpoint_create = coriolisclient.cli.endpoints:CreateEndpoint
    endpoint_update = coriolisclient.cli.endpoints:UpdateEndpoint
    endpoint_delete = coriolisclient.cli.endpoints:DeleteEndpoint
    endpoint_list = coriolisclient.cli.endpoints:ListEndpoint
    endpoint_show = coriolisclient.cli.endpoints:ShowEndpoint
    endpoint_validate_connection = coriolisclient.cli.endpoints:EndpointValidateConnection

    endpoint_instance_list = coriolisclient.cli.endpoint_instances:ListEndpointInstance

    endpoint_network_list = coriolisclient.cli.endpoint_networks:ListEndpointNetwork

    migration_cancel = coriolisclient.cli.migrations:CancelMigration
    migration_create = coriolisclient.cli.migrations:CreateMigration
    migration_deploy_replica = coriolisclient.cli.migrations:CreateMigrationFromReplica
    migration_delete = coriolisclient.cli.migrations:DeleteMigration
    migration_list = coriolisclient.cli.migrations:ListMigration
    migration_show = coriolisclient.cli.migrations:ShowMigration

    replica_create = coriolisclient.cli.replicas:CreateReplica
    replica_delete = coriolisclient.cli.replicas:DeleteReplica
    replica_disks_delete = coriolisclient.cli.replicas:DeleteReplicaDisks
    replica_list = coriolisclient.cli.replicas:ListReplica
    replica_show = coriolisclient.cli.replicas:ShowReplica

    replica_execution_cancel = coriolisclient.cli.replica_executions:CancelReplicaExecution
    replica_execute = coriolisclient.cli.replica_executions:CreateReplicaExecution
    replica_execution_delete = coriolisclient.cli.replica_executions:DeleteReplicaExecution
    replica_execution_list = coriolisclient.cli.replica_executions:ListReplicaExecution
    replica_execution_show = coriolisclient.cli.replica_executions:ShowReplicaExecution

    replica_schedule_delete = coriolisclient.cli.replica_schedules:DeleteReplicaSchedule
    replica_schedule_list = coriolisclient.cli.replica_schedules:ListReplicaSchedule
    replica_schedule_show = coriolisclient.cli.replica_schedules:ShowReplicaSchedule
    replica_schedule_create = coriolisclient.cli.replica_schedules:CreateReplicaSchedule
    replica_schedule_update = coriolisclient.cli.replica_schedules:UpdateReplicaSchedule

[build_sphinx]
source-dir = doc/source
build-dir = doc/build
all_files = 1

[upload_sphinx]
upload-dir = doc/build/html

[wheel]
universal = 1
