[metadata]
name = python-coriolisclient
summary = Coriolis Command-line Client
description-file =
    README.rst
author = Cloudbase Solutions Srl
author-email = info@cloudbasesolutions.com
home-page = http://cloudbase.it
classifier =
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.4
    Environment :: Console

[files]
packages =
    coriolisclient

[entry_points]
console_scripts =
    coriolis = coriolisclient.cli.shell:main

coriolis.v1 =
    endpoint_create = coriolisclient.cli.endpoints:CreateEndpoint
    endpoint_update = coriolisclient.cli.endpoints:UpdateEndpoint
    endpoint_delete = coriolisclient.cli.endpoints:DeleteEndpoint
    endpoint_list = coriolisclient.cli.endpoints:ListEndpoint
    endpoint_show = coriolisclient.cli.endpoints:ShowEndpoint
    endpoint_validate_connection = coriolisclient.cli.endpoints:EndpointValidateConnection

    endpoint_instance_list = coriolisclient.cli.endpoint_instances:ListEndpointInstance
    endpoint_instance_show = coriolisclient.cli.endpoint_instances:ShowEndpointInstance

    endpoint_network_list = coriolisclient.cli.endpoint_networks:ListEndpointNetwork
    endpoint_destination_options_list = coriolisclient.cli.endpoint_destination_options:ListEndpointDestinationOptions
    endpoint_source_options_list = coriolisclient.cli.endpoint_source_options:ListEndpointSourceOptions
    endpoint_storage_list = coriolisclient.cli.endpoint_storage:ListEndpointStorage
    endpoint_source_minion_pool_options_list = coriolisclient.cli.endpoint_source_minion_pool_options:ListEndpointSourceMinionPoolOptions
    endpoint_destination_minion_pool_options_list = coriolisclient.cli.endpoint_destination_minion_pool_options:ListEndpointDestinationMinionPoolOptions

    migration_cancel = coriolisclient.cli.migrations:CancelMigration
    migration_create = coriolisclient.cli.migrations:CreateMigration
    migration_deploy_replica = coriolisclient.cli.migrations:CreateMigrationFromReplica
    migration_delete = coriolisclient.cli.migrations:DeleteMigration
    migration_list = coriolisclient.cli.migrations:ListMigration
    migration_show = coriolisclient.cli.migrations:ShowMigration

    deployment_cancel = coriolisclient.cli.deployments:CancelDeployment
    deployment_create = coriolisclient.cli.deployments:CreateDeployment
    deployment_delete = coriolisclient.cli.deployments:DeleteDeployment
    deployment_list = coriolisclient.cli.deployments:ListDeployment
    deployment_show = coriolisclient.cli.deployments:ShowDeployment

    provider_list = coriolisclient.cli.providers:ListProvider
    provider_schema_list = coriolisclient.cli.providers:ListProviderSchemas

    replica_create = coriolisclient.cli.replicas:CreateReplica
    replica_delete = coriolisclient.cli.replicas:DeleteReplica
    replica_disks_delete = coriolisclient.cli.replicas:DeleteReplicaDisks
    replica_list = coriolisclient.cli.replicas:ListReplica
    replica_show = coriolisclient.cli.replicas:ShowReplica
    replica_update = coriolisclient.cli.replicas:UpdateReplica

    replica_execution_cancel = coriolisclient.cli.replica_executions:CancelReplicaExecution
    replica_execute = coriolisclient.cli.replica_executions:CreateReplicaExecution
    replica_execution_delete = coriolisclient.cli.replica_executions:DeleteReplicaExecution
    replica_execution_list = coriolisclient.cli.replica_executions:ListReplicaExecution
    replica_execution_show = coriolisclient.cli.replica_executions:ShowReplicaExecution

    replica_schedule_delete = coriolisclient.cli.replica_schedules:DeleteReplicaSchedule
    replica_schedule_list = coriolisclient.cli.replica_schedules:ListReplicaSchedule
    replica_schedule_show = coriolisclient.cli.replica_schedules:ShowReplicaSchedule
    replica_schedule_create = coriolisclient.cli.replica_schedules:CreateReplicaSchedule
    replica_schedule_update = coriolisclient.cli.replica_schedules:UpdateReplicaSchedule

    region_create = coriolisclient.cli.regions:CreateRegion
    region_list = coriolisclient.cli.regions:ListRegions
    region_show = coriolisclient.cli.regions:ShowRegion
    region_update = coriolisclient.cli.regions:UpdateRegion
    region_delete = coriolisclient.cli.regions:DeleteRegion

    service_create = coriolisclient.cli.services:CreateService
    service_list = coriolisclient.cli.services:ListServices
    service_show = coriolisclient.cli.services:ShowService
    service_update = coriolisclient.cli.services:UpdateService
    service_delete = coriolisclient.cli.services:DeleteService

    minion_pool_create = coriolisclient.cli.minion_pools:CreateMinionPool
    minion_pool_list = coriolisclient.cli.minion_pools:ListMinionPools
    minion_pool_show = coriolisclient.cli.minion_pools:ShowMinionPool
    minion_pool_update = coriolisclient.cli.minion_pools:UpdateMinionPool
    minion_pool_delete = coriolisclient.cli.minion_pools:DeleteMinionPool
    minion_pool_allocate = coriolisclient.cli.minion_pools:AllocateMinionPool
    minion_pool_refresh = coriolisclient.cli.minion_pools:RefreshMinionPool
    minion_pool_deallocate = coriolisclient.cli.minion_pools:DeallocateMinionPool

    log_list = coriolisclient.cli.logging:ListCoriolisLogs
    log_download = coriolisclient.cli.logging:DownloadCoriolisLog
    log_stream = coriolisclient.cli.logging:StreamCoriolisLog

    diagnostics_get = coriolisclient.cli.diagnostics:GetCoriolisDiagnostics

    licensing_server_status = coriolisclient.cli.licensing_server:ServerStatus

    licensing_licence_register = coriolisclient.cli.licensing:LicenceRegister
    licensing_licence_list = coriolisclient.cli.licensing:LicenceList
    licensing_licence_show = coriolisclient.cli.licensing:LicenceShow
    licensing_licence_delete = coriolisclient.cli.licensing:LicenceDelete

    licensing_appliance_status = coriolisclient.cli.licensing:LicensingApplianceStatus
    licensing_appliance_list = coriolisclient.cli.licensing_appliances:ApplianceList
    licensing_appliance_show = coriolisclient.cli.licensing_appliances:ApplianceShow
    licensing_appliance_create = coriolisclient.cli.licensing_appliances:ApplianceCreate

    licensing_reservation_list = coriolisclient.cli.licensing_reservations:ReservationList
    licensing_reservation_show = coriolisclient.cli.licensing_reservations:ReservationShow
    licensing_reservation_refresh = coriolisclient.cli.licensing_reservations:ReservationRefresh

[build_sphinx]
source-dir = doc/source
build-dir = doc/build
all_files = 1

[upload_sphinx]
upload-dir = doc/build/html

[wheel]
universal = 1
