[metadata]
name = python-coriolisclient
summary = Coriolis Command-line Client
description-file =
    README.rst
author = Cloudbase Solutions Srl
author-email = info@cloudbasesolutions.com
home-page = http://cloudbase.it
classifier =
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.4
    Environment :: Console

[files]
packages =
    coriolisclient

[entry_points]
console_scripts =
    coriolis = coriolisclient.cli.shell:main

coriolis.v1 =
    endpoint_create = coriolisclient.cli.endpoints:CreateEndpoint
    endpoint_update = coriolisclient.cli.endpoints:UpdateEndpoint
    endpoint_delete = coriolisclient.cli.endpoints:DeleteEndpoint
    endpoint_list = coriolisclient.cli.endpoints:ListEndpoint
    endpoint_show = coriolisclient.cli.endpoints:ShowEndpoint
    endpoint_validate_connection = coriolisclient.cli.endpoints:EndpointValidateConnection

    endpoint_instance_list = coriolisclient.cli.endpoint_instances:ListEndpointInstance
    endpoint_instance_show = coriolisclient.cli.endpoint_instances:ShowEndpointInstance

    endpoint_network_list = coriolisclient.cli.endpoint_networks:ListEndpointNetwork
    endpoint_destination_options_list = coriolisclient.cli.endpoint_destination_options:ListEndpointDestinationOptions
    endpoint_source_options_list = coriolisclient.cli.endpoint_source_options:ListEndpointSourceOptions
    endpoint_storage_list = coriolisclient.cli.endpoint_storage:ListEndpointStorage
    endpoint_source_minion_pool_options_list = coriolisclient.cli.endpoint_source_minion_pool_options:ListEndpointSourceMinionPoolOptions
    endpoint_destination_minion_pool_options_list = coriolisclient.cli.endpoint_destination_minion_pool_options:ListEndpointDestinationMinionPoolOptions

    deployment_cancel = coriolisclient.cli.deployments:CancelDeployment
    deployment_create = coriolisclient.cli.deployments:CreateDeployment
    deployment_delete = coriolisclient.cli.deployments:DeleteDeployment
    deployment_list = coriolisclient.cli.deployments:ListDeployment
    deployment_show = coriolisclient.cli.deployments:ShowDeployment

    provider_list = coriolisclient.cli.providers:ListProvider
    provider_schema_list = coriolisclient.cli.providers:ListProviderSchemas

    transfer_create = coriolisclient.cli.transfers:CreateTransfer
    transfer_delete = coriolisclient.cli.transfers:DeleteTransfer
    transfer_disks_delete = coriolisclient.cli.transfers:DeleteTransferDisks
    transfer_list = coriolisclient.cli.transfers:ListTransfer
    transfer_show = coriolisclient.cli.transfers:ShowTransfer
    transfer_update = coriolisclient.cli.transfers:UpdateTransfer

    transfer_execution_cancel = coriolisclient.cli.transfer_executions:CancelTransferExecution
    transfer_execute = coriolisclient.cli.transfer_executions:CreateTransferExecution
    transfer_execution_delete = coriolisclient.cli.transfer_executions:DeleteTransferExecution
    transfer_execution_list = coriolisclient.cli.transfer_executions:ListTransferExecution
    transfer_execution_show = coriolisclient.cli.transfer_executions:ShowTransferExecution

    transfer_schedule_delete = coriolisclient.cli.transfer_schedules:DeleteTransferSchedule
    transfer_schedule_list = coriolisclient.cli.transfer_schedules:ListTransferSchedule
    transfer_schedule_show = coriolisclient.cli.transfer_schedules:ShowTransferSchedule
    transfer_schedule_create = coriolisclient.cli.transfer_schedules:CreateTransferSchedule
    transfer_schedule_update = coriolisclient.cli.transfer_schedules:UpdateTransferSchedule

    region_create = coriolisclient.cli.regions:CreateRegion
    region_list = coriolisclient.cli.regions:ListRegions
    region_show = coriolisclient.cli.regions:ShowRegion
    region_update = coriolisclient.cli.regions:UpdateRegion
    region_delete = coriolisclient.cli.regions:DeleteRegion

    service_create = coriolisclient.cli.services:CreateService
    service_list = coriolisclient.cli.services:ListServices
    service_show = coriolisclient.cli.services:ShowService
    service_update = coriolisclient.cli.services:UpdateService
    service_delete = coriolisclient.cli.services:DeleteService

    minion_pool_create = coriolisclient.cli.minion_pools:CreateMinionPool
    minion_pool_list = coriolisclient.cli.minion_pools:ListMinionPools
    minion_pool_show = coriolisclient.cli.minion_pools:ShowMinionPool
    minion_pool_update = coriolisclient.cli.minion_pools:UpdateMinionPool
    minion_pool_delete = coriolisclient.cli.minion_pools:DeleteMinionPool
    minion_pool_allocate = coriolisclient.cli.minion_pools:AllocateMinionPool
    minion_pool_refresh = coriolisclient.cli.minion_pools:RefreshMinionPool
    minion_pool_deallocate = coriolisclient.cli.minion_pools:DeallocateMinionPool

    log_list = coriolisclient.cli.logging:ListCoriolisLogs
    log_download = coriolisclient.cli.logging:DownloadCoriolisLog
    log_stream = coriolisclient.cli.logging:StreamCoriolisLog

    diagnostics_get = coriolisclient.cli.diagnostics:GetCoriolisDiagnostics

    licensing_server_status = coriolisclient.cli.licensing_server:ServerStatus

    licensing_licence_register = coriolisclient.cli.licensing:LicenceRegister
    licensing_licence_list = coriolisclient.cli.licensing:LicenceList
    licensing_licence_show = coriolisclient.cli.licensing:LicenceShow
    licensing_licence_delete = coriolisclient.cli.licensing:LicenceDelete

    licensing_appliance_status = coriolisclient.cli.licensing:LicensingApplianceStatus
    licensing_appliance_list = coriolisclient.cli.licensing_appliances:ApplianceList
    licensing_appliance_show = coriolisclient.cli.licensing_appliances:ApplianceShow
    licensing_appliance_create = coriolisclient.cli.licensing_appliances:ApplianceCreate

    licensing_reservation_list = coriolisclient.cli.licensing_reservations:ReservationList
    licensing_reservation_show = coriolisclient.cli.licensing_reservations:ReservationShow
    licensing_reservation_refresh = coriolisclient.cli.licensing_reservations:ReservationRefresh

[build_sphinx]
source-dir = doc/source
build-dir = doc/build
all_files = 1

[upload_sphinx]
upload-dir = doc/build/html

[wheel]
universal = 1
